--- a/q/274092.html
+++ b/q/274092.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>R</td><td>240712T070250Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274119#274119">int 21h </a></td></tr>
-<tr d-ix="1"><td>001</td><td>Vyxal s</td><td>240712T065713Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274118#274118">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>002</td><td>05AB1E</td><td>240712T065301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274117#274117">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>024</td><td>Cognate</td><td>240712T050821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274115#274115">chunes</a></td></tr>
-<tr d-ix="4"><td>008</td><td>Wolfram Language Mathematica</td><td>240712T045510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274114#274114">Greg Mar</a></td></tr>
-<tr d-ix="5"><td>004</td><td>APLDyalog Unicode</td><td>240712T032151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274113#274113">Mukundan</a></td></tr>
-<tr d-ix="6"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
-<tr d-ix="7"><td>049</td><td>Java</td><td>240712T023659Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274112#274112">Unmitiga</a></td></tr>
-<tr d-ix="8"><td>014</td><td>Factor</td><td>240712T015607Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274111#274111">chunes</a></td></tr>
-<tr d-ix="9"><td>006</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
-<tr d-ix="10"><td>041</td><td>Red</td><td>240712T014531Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274109#274109">chunes</a></td></tr>
-<tr d-ix="11"><td>026</td><td>JavaScript Node.js</td><td>240712T002141Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274108#274108">l4m2</a></td></tr>
-<tr d-ix="12"><td>007</td><td>Charcoal</td><td>240712T001352Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274107#274107">Neil</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Charcoal</td><td>240712T001352Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274107#274107">Neil</a></td></tr>
+<tr d-ix="1"><td>012</td><td>R</td><td>240712T070250Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274119#274119">int 21h </a></td></tr>
+<tr d-ix="2"><td>001</td><td>Vyxal s</td><td>240712T065713Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274118#274118">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>002</td><td>05AB1E</td><td>240712T065301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274117#274117">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>024</td><td>Cognate</td><td>240712T050821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274115#274115">chunes</a></td></tr>
+<tr d-ix="5"><td>008</td><td>Wolfram Language Mathematica</td><td>240712T045510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274114#274114">Greg Mar</a></td></tr>
+<tr d-ix="6"><td>004</td><td>APLDyalog Unicode</td><td>240712T032151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274113#274113">Mukundan</a></td></tr>
+<tr d-ix="7"><td>004</td><td>Uiua</td><td>240711T220003Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274101#274101">noodle p</a></td></tr>
+<tr d-ix="8"><td>049</td><td>Java</td><td>240712T023659Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274112#274112">Unmitiga</a></td></tr>
+<tr d-ix="9"><td>014</td><td>Factor</td><td>240712T015607Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274111#274111">chunes</a></td></tr>
+<tr d-ix="10"><td>006</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
+<tr d-ix="11"><td>041</td><td>Red</td><td>240712T014531Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274109#274109">chunes</a></td></tr>
+<tr d-ix="12"><td>026</td><td>JavaScript Node.js</td><td>240712T002141Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274108#274108">l4m2</a></td></tr>
 <tr d-ix="13"><td>024</td><td>Excel</td><td>240712T000858Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274106#274106">z..</a></td></tr>
 <tr d-ix="14"><td>019</td><td>Arturo</td><td>240711T231748Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274103#274103">chunes</a></td></tr>
 <tr d-ix="15"><td>029</td><td>Google Sheets</td><td>240711T233415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274104#274104">doubleun</a></td></tr>
@@ -49,12 +49,29 @@
 <tr d-ix="20"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
 <tr d-ix="21"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>7</s> 5 bytes</h1>
+<pre><code>ＩΣＸθθ
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0VyMgvzy1SKNQR6FQEwis//@PjjbRUTDTUTCPjf2vW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code.</p>
+<pre><code>   θ    Input array
+  Ｘ     Vectorised raised to power
+    θ   Input array
+ Σ      Take the sum
+Ｉ       Cast to string
+        Implicitly print
+</code></pre>
+<p>Edit: Saved 2 bytes because I forgot that <code>Power</code> is one of the four (five on ATO) operators that auto-vectorises if both parameters are lists.</p>
+<p>7 bytes to take input as a string:</p>
+<pre><code>ＩΣＥＡＸιι
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0V8M3sUDDM6@gtERDU0chIL88tUgjU0chUxMErP//NzYxNv2vW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: <code>Power</code> auto-casts strings to integer, so I don't need to write <code>Ｉι</code> twice.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 12 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x)sum(x^x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhZrYjQqNItLczUq4io0IUKr0zSSNUx0zHTMNaEiCxZAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/blob/version-2/documents/knowledge/elements.md" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 1 <a href="https://github.com/Vyxal/Vyxal/blob/version-2-legacy/docs/codepage.txt" rel="nofollow noreferrer">byte</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/blob/version-2/documents/knowledge/elements.md" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 1 <a href="https://github.com/Vyxal/Vyxal/blob/version-2-legacy/docs/codepage.txt" rel="nofollow noreferrer">byte</a></h1>
 <pre><code>e
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzIiwiIiwiZSIsIiIsIls0LDYsN10iXQ==" rel="nofollow noreferrer">Try it online.</a></p>
@@ -65,7 +82,7 @@
     # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 2 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 2 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>mO
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f8/1////2gTHTMd81gA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -77,22 +94,22 @@
     # (after which this sum is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://cognate-lang.github.io" rel="nofollow noreferrer">Cognate</a>, 24 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://cognate-lang.github.io" rel="nofollow noreferrer">Cognate</a>, 24 bytes</h1>
 <pre><code>(For X(+ ^ Twin)0 Let X)
 </code></pre>
 <p><a href="https://staging.ato.pxeger.com/run?1=m708OT89L7EkdcEan8ziEg0TBTMFc03rpaUlaboWOzTc8osUIjS0FeIUQsoz8zQNFHxSSxQiNCHSK60DijLzShRc8iH8BQsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 8 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 8 bytes</h1>
 <pre><code>Tr[#^#]&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7P6QoWjlOOVbtf0BRZl5JtEJatEK1iY6ZjnmtQmzsfwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a> Unnamed function taking a list like <code>{4, 6, 7}</code> as input. The exponentiation operator <code>^</code> automatically distributes over arrays of the same length, and <code>Tr</code> of a one-dimensional list is its sum.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> 4 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu6" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> 4 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <pre><code>+.*⍨
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=09bTetS7AgA&amp;f=AwA&amp;i=S1MwUTBTMAcA&amp;r=tio&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu6" class="pu"><h1>Uiua, 4 bytes</h1>
+<div id="pu7" class="pu"><h1>Uiua, 4 bytes</h1>
 <pre><code>/+ⁿ.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAgLyvigb8uCgpGIDRfNl83Cg==" rel="nofollow noreferrer">Try it</a></p>
@@ -101,18 +118,18 @@
    .  # itself
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>Java, 49 bytes</h1>
+<div id="pu8" class="pu"><h1>Java, 49 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>l-&gt;l.stream().mapToDouble(x-&gt;Math.pow(x,x)).sum()
 </code></pre>
 <p><a href="https://tio.run/##ZU67bsMwDNz9FRwlwOZUpINTT0WAAs2UbEUH1pFduXrBolIHRb7dlRGnS7mQvDvecaAzVcPpa9Y2@JFhyDsm1gZfdeS6@Ad3ybWsvcPdOtRFSB9Gt9AaihH2pB38FJBrxSMT53b2@gQ2s@LAo3b92zvQ2Ee5ipe6W26X7O2LY9WrsSnh2Wcn1UD3NJuqMRh5VGSFREvh6G@smKpmT/yJwX@LqZykxJiyZr6b138xh0tkZdEnxpA/YeNEhxSCuYglGH0nHkrYlPAopbydXYvr/As" rel="nofollow noreferrer" title="Java (JDK) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 14 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 14 bytes</h1>
 <pre><code>[ dup v^ sum ]
 </code></pre>
 <p><a href="https://tio.run/##S0tMLskv@h8a7OnnbqVQUJRaUlJZUJSZV6KQm1iSoVeWCpIuVshOLcpLzVEoTi0sTc1LTi1WsObiqlYwUTBTMFeo/R@tkFJaoFAWp1BcmqsQ@z85MSdHQe8/AA" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 6 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 6 bytes</h1>
 <pre><code>+/@:^~
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8GCpaUlaboWq9MUbK0UtPUdrOLqICJrUpMz8hXSFEwUzBTMIUIwxQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -120,31 +137,16 @@
     ^~  NB. raise each to the power of itself
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 41 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 41 bytes</h1>
 <pre><code>func[b][x: 0 foreach n b[x: n ** n + x]x]
 </code></pre>
 <p><a href="https://tio.run/##K0pN@R@UmhIdy5VmpfA/rTQvOTopNrrCSsFAIS2/KDUxOUMhTyEJJJCnoKUFJLQVKmIrYv8XFGXmlSikKUSbKJgpmMf@BwA" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 26 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 26 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map(t=&gt;n+=t**t,n=0)|n
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/C1q5CLzexQKPE1i5P27ZES6tEJ8/WQLMm739yfl5xfk6qXk5@ukaaRrSJjpmOeaym5n8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
-<pre><code>ＩΣＥＡＸιι
-</code></pre>
-<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0V8M3sUDDM6@gtERDU0chIL88tUgjU0chUxMErP//j4420VEw01Ewj439r1uWAwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code.</p>
-<pre><code>   Ａ    Input array
-  Ｅ     Map over values
-      ι Current value
-    Ｘ   Raised to power
-      ι Current value
- Σ      Take the sum
-Ｉ       Cast to string
-        Implicitly print
-</code></pre>
-<p>Because <code>Power</code> auto-casts to string, if all of the values are single digits then the program can also take input as a string: <a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEI7g0V8M3sUDDM6@gtERDU0chIL88tUgjU0chUxMErP//NzYxNv2vW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu13" class="pu"><h1>Excel, 24 bytes</h1>
 <p>Input in <code>A:A</code> entered in <code>A1</code> as an array (i.e. <code>={4;6;7}</code>)</p>
