--- a/q/274087.html
+++ b/q/274087.html
@@ -26,18 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>132</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
+<tr d-ix="0"><td>119</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
 <tr d-ix="1"><td>058</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
 <tr d-ix="2"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="3"><td>152</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
 <tr d-ix="4"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>139</s> 132 bytes</h1>
-<p>(or 111 bytes in <strong>R</strong> ≥ 4.1 by replacing 3x <code>function</code> keywords for <code>\</code>)</p>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>139</s> <s>132</s> 119 bytes</h1>
+<p>(or 98 bytes in <strong>R</strong> ≥ 4.1 by replacing 3x <code>function</code> keywords for <code>\</code>).</p>
+<p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
 
-<pre class="lang-r prettyprint-override"><code>function(n,r,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(j&lt;-i*r/R,j,i~function(x)i~function(y)all(abs(x+y*1i-v)&lt;R))
+<pre class="lang-r prettyprint-override"><code>function(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~function(x)i~function(y)all(abs(x+y*1i-v)&lt;R))
 </code></pre>
-<p><a href="https://rdrr.io/snippets/embed/?code=%0Areuleaux%3D%0Afunction(n%2Cr%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(j%3C-i*r%2FR%2Cj%2Ci%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3%2C1)%0Areuleaux(5%2C2)" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
+<p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
 <p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>58 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
